dotnet add BlazorCrudDotNet8.UnitTests reference BlazorCrudDotNet8.BusinessLogic

--- a/BlazorCrudDotNet8.UnitTests/BlazorCrudDotNet8.UnitTests.csproj
+++ b/BlazorCrudDotNet8.UnitTests/BlazorCrudDotNet8.UnitTests.csproj
@@ -21,4 +21,8 @@
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorCrudDotNet8.BusinessLogic\BlazorCrudDotNet8.BusinessLogic.csproj" />
+  </ItemGroup>
+
 </Project>
