--- a/BlazorCrudDotNet8/appsettings.json
+++ b/BlazorCrudDotNet8/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "BaseUri": "https://localhost:7218",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLEXPRESS;Database=aspnet-BlazorCrudDotNet8-acd4d0e8-ecbe-4fdf-bc2f-23f13ee68211;Trusted_Connection=True;TrustServerCertificate=true"
   },
