--- a/BlazorCrudDotNet8/BlazorCrudDotNet8.csproj
+++ b/BlazorCrudDotNet8/BlazorCrudDotNet8.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorCrudDotNet8.Shared\BlazorCrudDotNet8.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
