--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,19 +18,19 @@ jobs:
       - name: Build
         run: dotnet build --no-restore
       - name: Test Units
-        run: dotnet test --no-build --verbosity normal INSERTAPPNAMEHERE.UnitTests
+        run: dotnet test --no-build --verbosity normal BlazorCrudDotNet8.UnitTests
       - name: Test Server Components
-        run: dotnet test --no-build --verbosity normal INSERTAPPNAMEHERE.ServerComponentTests
+        run: dotnet test --no-build --verbosity normal BlazorCrudDotNet8.ServerComponentTests
       - name: Test Client Components
-        run: dotnet test --no-build --verbosity normal INSERTAPPNAMEHERE.ClientComponentTests
+        run: dotnet test --no-build --verbosity normal BlazorCrudDotNet8.ClientComponentTests
       - name: Run app in background
-        run: dotnet run --project INSERTAPPNAMEHERE &
+        run: dotnet run --project BlazorCrudDotNet8 &
       - name: Install powershell tools
         run: dotnet tool install --global PowerShell --version 7.4.4
       - name: Install playwright dependencies
-        run: cd INSERTAPPNAMEHERE.AcceptanceTests && pwsh bin/Debug/net8.0/playwright.ps1 install --with-deps
+        run: cd BlazorCrudDotNet8.AcceptanceTests && pwsh bin/Debug/net8.0/playwright.ps1 install --with-deps
       - name: Test Acceptances
-        run: dotnet test --no-build --verbosity normal INSERTAPPNAMEHERE.AcceptanceTests
+        run: dotnet test --no-build --verbosity normal BlazorCrudDotNet8.AcceptanceTests
 name: .NET
 on:
   pull_request:
