gawk -i inplace "{ gsub(/\(localdb\)/, \".\") }; { print }" BlazorCrudDotNet8/appsettings.json

--- a/BlazorCrudDotNet8/appsettings.json
+++ b/BlazorCrudDotNet8/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\SQLEXPRESS;Database=aspnet-BlazorCrudDotNet8-4e4ae6d6-0db9-4fea-a9a3-a30b8c56d977;Trusted_Connection=True;TrustServerCertificate=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=aspnet-BlazorCrudDotNet8-4e4ae6d6-0db9-4fea-a9a3-a30b8c56d977;Trusted_Connection=True;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
