--- a/BlazorCrudDotNet8/appsettings.json
+++ b/BlazorCrudDotNet8/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "baseUri": "https://localhost:7071",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLEXPRESS;Database=aspnet-BlazorCrudDotNet8-3ba4a54f-048d-4753-abcb-6c945492b429;Trusted_Connection=True;TrustServerCertificate=true"
   },
