Use WebAssembly to Create a Game

--- a/BlazorCrudDotNet8/appsettings.json
+++ b/BlazorCrudDotNet8/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "BaseUri": "https://localhost:7263",
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\SQLEXPRESS;Database=aspnet-BlazorCrudDotNet8-a8a3a88a-49d9-4bf8-8306-fe8a5a94b8ca;Trusted_Connection=True;TrustServerCertificate=true"
   },
