gawk -i inplace "{ gsub(/\(localdb\)/, \".\") }; { print }" BlazorCrudDotNet8/appsettings.json

--- a/BlazorCrudDotNet8/appsettings.json
+++ b/BlazorCrudDotNet8/appsettings.json
@@ -1,7 +1,7 @@
 {
   "BaseUri": "https://localhost:7115",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\SQLEXPRESS;Database=aspnet-BlazorCrudDotNet8-07915d8a-a877-4993-94e9-840782bdd183;Trusted_Connection=True;TrustServerCertificate=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=aspnet-BlazorCrudDotNet8-07915d8a-a877-4993-94e9-840782bdd183;Trusted_Connection=True;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
