gawk -i inplace "{ gsub(/ConnectionStrings/, \"BaseUri\\\": \\\"https://localhost:7255\\\",\n \ \\\"ConnectionStrings\") }; { print }" BlazorCrudDotNet8/appsettings.json

--- a/BlazorCrudDotNet8/appsettings.json
+++ b/BlazorCrudDotNet8/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "BaseUri": "https://localhost:7255",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlazorCrudDotNet8-a9d16e19-419d-412f-822f-54b1571cbeb5;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
