gawk -i inplace "{ gsub(/ConnectionStrings/, \"BaseUri\\\": \\\"https://localhost:7014\\\",\n \ \\\"ConnectionStrings\") }; { print }" BlazorCrudDotNet8/appsettings.json

--- a/BlazorCrudDotNet8/appsettings.json
+++ b/BlazorCrudDotNet8/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "BaseUri": "https://localhost:7014",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlazorCrudDotNet8-fb9f48d2-8404-40f3-b164-8909f0857381;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
