gawk -i inplace "{ gsub(/ConnectionStrings/, \"BaseUri\\\": \\\"https://localhost:7044\\\",\n \ \\\"ConnectionStrings\") }; { print }" BlazorCrudDotNet8/appsettings.json

--- a/BlazorCrudDotNet8/appsettings.json
+++ b/BlazorCrudDotNet8/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "BaseUri": "https://localhost:7044",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlazorCrudDotNet8-07e397dd-7b02-4338-a3d0-cf5d2bcf8244;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
