--- a/BlazorCrudDotNet8.Server.ControllerTests/BlazorCrudDotNet8.Server.ControllerTests.csproj
+++ b/BlazorCrudDotNet8.Server.ControllerTests/BlazorCrudDotNet8.Server.ControllerTests.csproj
@@ -21,4 +21,8 @@
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorCrudDotNet8\BlazorCrudDotNet8.csproj" />
+  </ItemGroup>
+
 </Project>
