--- a/BlazorCrudDotNet8.Client/BlazorCrudDotNet8.Client.csproj
+++ b/BlazorCrudDotNet8.Client/BlazorCrudDotNet8.Client.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorCrudDotNet8.Shared\BlazorCrudDotNet8.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
