dotnet add BlazorCrudDotNet8 reference BlazorCrudDotNet8.BusinessLogic

--- a/BlazorCrudDotNet8/BlazorCrudDotNet8.csproj
+++ b/BlazorCrudDotNet8/BlazorCrudDotNet8.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BlazorCrudDotNet8.Shared\BlazorCrudDotNet8.Shared.csproj" />
+    <ProjectReference Include="..\BlazorCrudDotNet8.BusinessLogic\BlazorCrudDotNet8.BusinessLogic.csproj" />
   </ItemGroup>
 
 </Project>
