--- a/BlazorCrudDotNet8.BusinessLogic.UnitTests/BlazorCrudDotNet8.BusinessLogic.UnitTests.csproj
+++ b/BlazorCrudDotNet8.BusinessLogic.UnitTests/BlazorCrudDotNet8.BusinessLogic.UnitTests.csproj
@@ -21,4 +21,8 @@
     <Using Include="NUnit.Framework" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorCrudDotNet8.BusinessLogic\BlazorCrudDotNet8.BusinessLogic.csproj" />
+  </ItemGroup>
+
 </Project>
