--- a/BlazorCrudDotNet8/appsettings.json
+++ b/BlazorCrudDotNet8/appsettings.json
@@ -1,7 +1,7 @@
 {
   "BaseUri": "https://localhost:7283",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlazorCrudDotNet8-a169184f-f14c-4f8a-b34c-14b2ea1fc3a3;Trusted_Connection=True;TrustServerCertificate=true"
+    "DefaultConnection": "Server=(localdb)\\SQLEXPRESS;Database=aspnet-BlazorCrudDotNet8-a169184f-f14c-4f8a-b34c-14b2ea1fc3a3;Trusted_Connection=True;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
