--- a/BlazorCrudDotNet8.Shared/BlazorCrudDotNet8.Shared.csproj
+++ b/BlazorCrudDotNet8.Shared/BlazorCrudDotNet8.Shared.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.10" />
   </ItemGroup>
 
