gawk -i inplace "{ gsub(/ConnectionStrings/, \"BaseUri\\\": \\\"https://localhost:7102\\\",\n \ \\\"ConnectionStrings\") }; { print }" BlazorCrudDotNet8/appsettings.json

--- a/BlazorCrudDotNet8/appsettings.json
+++ b/BlazorCrudDotNet8/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "BaseUri": "https://localhost:7102",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlazorCrudDotNet8-1bf6988f-3385-4c76-a644-c5bceb6cb5bd;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
