gawk -i inplace "{ gsub(/\(localdb\)/, \".\") }; { print }" BlazorCrudDotNet8/appsettings.json

--- a/BlazorCrudDotNet8/appsettings.json
+++ b/BlazorCrudDotNet8/appsettings.json
@@ -1,7 +1,7 @@
 {
   "BaseUri": "https://localhost:7102",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\SQLEXPRESS;Database=aspnet-BlazorCrudDotNet8-1bf6988f-3385-4c76-a644-c5bceb6cb5bd;Trusted_Connection=True;TrustServerCertificate=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=aspnet-BlazorCrudDotNet8-1bf6988f-3385-4c76-a644-c5bceb6cb5bd;Trusted_Connection=True;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
