--- a/BlazorCrudDotNet8/appsettings.json
+++ b/BlazorCrudDotNet8/appsettings.json
@@ -1,7 +1,7 @@
 {
   "BaseUri": "https://localhost:7228",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\SQLEXPRESS;Database=aspnet-BlazorCrudDotNet8-855fad77-1f43-4490-a4de-020b31ed7c85;Trusted_Connection=True;TrustServerCertificate=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=aspnet-BlazorCrudDotNet8-855fad77-1f43-4490-a4de-020b31ed7c85;Trusted_Connection=True;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
