dotnet add BlazorCrudDotNet8 reference BlazorCrudDotNet8.BusinessLogic

--- a/BlazorCrudDotNet8/BlazorCrudDotNet8.csproj
+++ b/BlazorCrudDotNet8/BlazorCrudDotNet8.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorCrudDotNet8.BusinessLogic\BlazorCrudDotNet8.BusinessLogic.csproj" />
+  </ItemGroup>
+
 </Project>
