dotnet add BlazorCrudDotNet8 reference BlazorCrudDotNet8.Shared

--- a/BlazorCrudDotNet8/BlazorCrudDotNet8.csproj
+++ b/BlazorCrudDotNet8/BlazorCrudDotNet8.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BlazorCrudDotNet8.BusinessLogic\BlazorCrudDotNet8.BusinessLogic.csproj" />
+    <ProjectReference Include="..\BlazorCrudDotNet8.Shared\BlazorCrudDotNet8.Shared.csproj" />
   </ItemGroup>
 
 </Project>
