--- a/BlazorCrudDotNet8.Shared/BlazorCrudDotNet8.Shared.csproj
+++ b/BlazorCrudDotNet8.Shared/BlazorCrudDotNet8.Shared.csproj
@@ -15,4 +15,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="8.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorCrudDotNet8.BusinessLogic\BlazorCrudDotNet8.BusinessLogic.csproj" />
+  </ItemGroup>
+
 </Project>
