--- a/BlazorCrudDotNet8.BusinessLogic/BlazorCrudDotNet8.BusinessLogic.csproj
+++ b/BlazorCrudDotNet8.BusinessLogic/BlazorCrudDotNet8.BusinessLogic.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Bogus" Version="35.6.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid" Version="8.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.QuickGrid.EntityFrameworkAdapter" Version="8.0.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
   </ItemGroup>
 
 </Project>
