--- a/BlazorCrudDotNet8.BusinessLogic/BlazorCrudDotNet8.BusinessLogic.csproj
+++ b/BlazorCrudDotNet8.BusinessLogic/BlazorCrudDotNet8.BusinessLogic.csproj
@@ -17,6 +17,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.10" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.6" />
   </ItemGroup>
 
 </Project>
