gawk -i inplace "{ gsub(/\(localdb\)/, \".\") }; { print }" BlazorCrudDotNet8/appsettings.json

--- a/BlazorCrudDotNet8/appsettings.json
+++ b/BlazorCrudDotNet8/appsettings.json
@@ -1,7 +1,7 @@
 {
   "BaseUri": "https://localhost:7186",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\SQLEXPRESS;Database=aspnet-BlazorCrudDotNet8-2ec79cee-1413-49d6-a280-98d055088ffc;Trusted_Connection=True;TrustServerCertificate=true"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=aspnet-BlazorCrudDotNet8-2ec79cee-1413-49d6-a280-98d055088ffc;Trusted_Connection=True;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
