gawk -i inplace "{ gsub(/ConnectionStrings/, \"BaseUri\\\": \\\"https://localhost:7266\\\",\n \ \\\"ConnectionStrings\") }; { print }" BlazorCrudDotNet8/appsettings.json

--- a/BlazorCrudDotNet8/appsettings.json
+++ b/BlazorCrudDotNet8/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "BaseUri": "https://localhost:7266",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlazorCrudDotNet8-b00322d9-82cc-4ec9-afa1-f65a1fb19d9c;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
