--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,23 +21,23 @@ jobs:
       - name: Build
         run: dotnet build --no-restore
       - name: Test Units
-        run: dotnet test --no-build --verbosity normal ApplicationNamePlaceholder.BusinessLogic.UnitTests
+        run: dotnet test --no-build --verbosity normal BlazorCrudDotNet8.BusinessLogic.UnitTests
       - name: Test Server Components
-        run: dotnet test --no-build --verbosity normal ApplicationNamePlaceholder.Server.ComponentTests
+        run: dotnet test --no-build --verbosity normal BlazorCrudDotNet8.Server.ComponentTests
       - name: Test Server Controllers
-        run: dotnet test --no-build --verbosity normal ApplicationNamePlaceholder.Server.ControllerTests
+        run: dotnet test --no-build --verbosity normal BlazorCrudDotNet8.Server.ControllerTests
       - name: Test Client Components
-        run: dotnet test --no-build --verbosity normal ApplicationNamePlaceholder.Client.ComponentTests
+        run: dotnet test --no-build --verbosity normal BlazorCrudDotNet8.Client.ComponentTests
       - name: Test Shared Components
-        run: dotnet test --no-build --verbosity normal ApplicationNamePlaceholder.Shared.ComponentTests
+        run: dotnet test --no-build --verbosity normal BlazorCrudDotNet8.Shared.ComponentTests
       - name: Run app in background
-        run: dotnet run --project ApplicationNamePlaceholder &
+        run: dotnet run --project BlazorCrudDotNet8 &
       - name: Install powershell tools
         run: dotnet tool install --global PowerShell
       - name: Install playwright dependencies
-        run: cd ApplicationNamePlaceholder.AcceptanceTests && pwsh bin/Debug/net8.0/playwright.ps1 install --with-deps
+        run: cd BlazorCrudDotNet8.AcceptanceTests && pwsh bin/Debug/net8.0/playwright.ps1 install --with-deps
       - name: Test Acceptances
-        run: dotnet test --no-build --verbosity normal ApplicationNamePlaceholder.AcceptanceTests
+        run: dotnet test --no-build --verbosity normal BlazorCrudDotNet8.AcceptanceTests
 name: .NET
 on:
   pull_request:
