--- a/BlazorCrudDotNet8/appsettings.json
+++ b/BlazorCrudDotNet8/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "BaseUri": "https://localhost:7271",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlazorCrudDotNet8-f16c7646-7b49-43bc-8c17-bfaa19a254c3;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
