gawk -i inplace "{ gsub(/mssqllocaldb/, \"SQLEXPRESS\") }; { print }" BlazorCrudDotNet8/appsettings.json

--- a/BlazorCrudDotNet8/appsettings.json
+++ b/BlazorCrudDotNet8/appsettings.json
@@ -1,7 +1,7 @@
 {
   "BaseUri": "https://localhost:7271",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BlazorCrudDotNet8-f16c7646-7b49-43bc-8c17-bfaa19a254c3;Trusted_Connection=True;TrustServerCertificate=true"
+    "DefaultConnection": "Server=(localdb)\\SQLEXPRESS;Database=aspnet-BlazorCrudDotNet8-f16c7646-7b49-43bc-8c17-bfaa19a254c3;Trusted_Connection=True;TrustServerCertificate=true"
   },
   "Logging": {
     "LogLevel": {
