--- a/BlazorCrudDotNet8.BusinessLogic/BlazorCrudDotNet8.BusinessLogic.csproj
+++ b/BlazorCrudDotNet8.BusinessLogic/BlazorCrudDotNet8.BusinessLogic.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="35.6.1" />
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
